--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,5 +1,5 @@
 <div class="container">
-	 <div class="contaienr">
+	 <div class="container">
 		<div class="row">
 			<div class="col-md-6">
 				<img src="/assets/img/trbo.png" class="img-responsive" style="min-height: 10em;"/>
