--- a/views/layouts/foundation.handlebars
+++ b/views/layouts/foundation.handlebars
@@ -9,5 +9,8 @@
 
   {{{body}}}
 
+  <script src="/assets/js/jquery.min.js"></script>
+  <script src="/assets/js/front.js"></script>
+
 </body>
 </html>
