--- a/views/matching.handlebars
+++ b/views/matching.handlebars
@@ -9,5 +9,5 @@
 </div>
 
 <div id="footer">
-  <button>button1</button>
+  <button id="match-button" type="button" class="button large">Match</button>
 </div>
