--- a/views/layouts/foundation.handlebars
+++ b/views/layouts/foundation.handlebars
@@ -10,6 +10,7 @@
   {{{body}}}
 
   <script src="/assets/js/jquery.min.js"></script>
+  <script src="/assets/js/swipe.js"></script>
   <script src="/assets/js/front.js"></script>
 
 </body>
