--- a/views/matching.handlebars
+++ b/views/matching.handlebars
@@ -1,10 +1,14 @@
 <div id="slider" class="swipe">
   <div class="swipe-wrap">
     <div class="tile">
-      <p class="hobby-text">sample text</p>
+      <p class="hobby-text">sample text 1</p>
     </div>
-    <div></div>
-    <div></div>
+    <div class="tile">
+      <p class="hobby-text">sample text 2</p>
+    </div>
+    <div class="tile">
+      <p class="hobby-text">sample text 3</p>
+    </div>
   </div>
 </div>
 
