convert "match" button into form submit

--- a/views/matching.handlebars
+++ b/views/matching.handlebars
@@ -13,5 +13,7 @@
 </div>
 
 <div id="footer">
-  <button id="match-button" type="button" class="button large">Match</button>
+  <form action="/video1" method="post">
+    <input type="submit" id="match-button" class="button large" value="Match"></input>
+  </form>
 </div>
