--- a/views/matching.handlebars
+++ b/views/matching.handlebars
@@ -13,7 +13,7 @@
 </div>
 
 <div id="footer">
-  <form action="/video1" method="post">
+  <form action="/video" method="post">
     <input type="submit" id="match-button" class="button large" value="Match"></input>
   </form>
 </div>
